--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -15,7 +15,7 @@
         android:padding="8dp"
         >
         <TextView
-            android:id="@+id/text_vie_title"
+            android:id="@+id/text_view_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
@@ -45,7 +45,7 @@
     android:layout_alignParentStart="true"
     android:layout_alignParentLeft="true"
     android:text="Description"
-    android:layout_below="@+id/text_vie_title"
+    android:layout_below="@+id/text_view_title"
 
 
     />
